# ski-trails

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  config.yaml  keystone.py  pyproject.toml  requirements.txt  trails  vail-resorts.py  vail.py
.github/workflows/: main.yml
data/: abasin.json
frontend/: index.html  package.json
frontend/public/: index.html  manifest.json
frontend/ski-trails/: package-lock.json
frontend/src/: App.js  index.js
frontend/src/components/: trailsTable.js
lib/: config.py  constants.py  multi.py  transformations.py
manifests/: deployment.yaml  redis.yaml
plugins/: README.md  abasin.py  copper.py  copper_eldora.py  loveland.py  mtn_powder.py  vail.py
