[tool.poetry]
name = "ski-trails"
version = "0.1.0"
description = ""
authors = ["Duncan Finney <duncan.finney@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "4.10.0"
pyyaml = "6.0.1"
requests = "2.26.0"
columnar = "1.3.1"
click = "8.0.3"
twilio = "7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
